--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   google_nav_bar: ^5.0.6
   http: ^1.1.0
   geolocator: ^10.1.0
+  google_maps_flutter: ^2.5.0
+ 
 
 dev_dependencies:
   flutter_test:
