--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   http: ^1.1.0
   geolocator: ^10.1.0
   google_maps_flutter: ^2.5.0
+  geocoding: ^2.1.1
+  shared_preferences: ^2.2.2
  
 
 dev_dependencies:
